fixed spacing between project cards

--- a/src/pages/LaunchPad/css/ProjectsCard.css
+++ b/src/pages/LaunchPad/css/ProjectsCard.css
@@ -2,29 +2,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 315px;
-  height: 189px;
+  width: 300px;
+  height: 200px;
   background-color: #1b1b1c;
-  padding: 10px;
-  border-radius: 5px 1px 5px 5px;
+  padding: 10px 0px 10px 10px;
+  /* border-radius: 5px 1px 5px 5px; */
   border-radius: 3px;
+}
+
+.logo-text {
+  font-size: 10px;
 }
 
 .logo-countdown-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  justify-content: space-between;
 }
 .projects-card .logo-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 .projects-card .logo {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   vertical-align: middle;
   border-style: none;
   margin-bottom: 5px;
@@ -59,9 +64,9 @@
   color: white;
   color: white;
   color: var(--accent-color, white);
-  width: 35px;
-  height: 35px;
-  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 2px;
   background-color: hsla(0, 0%, 82.7%, 0.3);
   display: flex;
   justify-content: center;
@@ -78,7 +83,7 @@
 }
 
 .seperator {
-  margin: 0px 1px 10px 1px;
+  margin: 0px 1px 15px 1px;
   font-size: 20px;
   color: #eb5c20;
 }
