--- a/src/pages/LaunchPad/styles.less
+++ b/src/pages/LaunchPad/styles.less
@@ -2111,7 +2111,7 @@
     justify-content: center;
     padding: 2em 0;
     z-index: 1;
-    gap :10px;
+    gap :40px;
 }
 
 .titleBlock{
